# DesignPatterns

./: CMakeLists.txt  CMakeLists.txt.in  README.md  common.h  lecture_02_open_closed_principle_problem.cpp  lecture_03_liskov_substitution_principle.cpp  lecture_04_interface_segregation_principle_problem.cpp  lecture_05_dependency_inversion_principle_solution.cpp  lecture_07_fluent_builder.cpp  lecture_07_fluent_builder.h  lecture_08_groovy_style_builder.cpp
Adapter/: Adapter.cpp  CMakeLists.txt
Adapter_Exercise/: Adapter_Exercise.cpp  CMakeLists.txt
Bridge/: Bridge.cpp  BridgeNotes.txt  CMakeLists.txt  Person.cpp  Person.h
Bridge_Exercise/: Bridge_Exercise.cpp  CMakeLists.txt
Builder/: CMakeLists.txt  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h  PersonManager.cpp  main.cpp
Builder_Exercise/: CMakeLists.txt  CodeBuilder.cpp
Composite/: ArrayBackedProperties.cpp  CMakeLists.txt  Composite.cpp  CompositeNotes.txt  NeuralNetwork.cpp
Composite_Exercise/: CMakeLists.txt  Composite_Exercise.cpp  Composite_Exercise.h  exercise.h
Decorator/: CMakeLists.txt  DecoratorNotes.txt  DynamicDecorator.cpp  FunctionalDecorator.cpp  StaticDecorator.cpp
Decorator_Exercise/: CMakeLists.txt  Decorator_Exercise.cpp
Facade/: FacadeNotes
Factory/: AbstractFactory.cpp  CMakeLists.txt  Factory.cpp  FactoryMethod.cpp  FunctionalFactory.cpp  HotDrink.h  InnerFactory.cpp  Point.cpp  SingletonInnerFactory.cpp
Factory_Exercise/: CMakeLists.txt  PersonFactory.cpp
Flyweight/: CMakeLists.txt  Flyweight.cpp  FlyweightNotes  PrebuiltFlyweight.cpp  TextFormatting.cpp
Flyweight_Exercise/: CMakeLists.txt  Flyweight_Exercise.cpp
Lectures/: CMakeLists.txt  lecture_01_single_responsibility_principle.cpp  lecture_02_open_closed_principle_solution.cpp  lecture_04_interface_segregation_principle_solution.cpp  lecture_05_dependency_inversion_principle_problem.cpp  lecture_06_builder.cpp  lecture_06_builder_problem.cpp
Prototype/: CMakeLists.txt  Prototype.cpp  PrototypeFactory.cpp  PrototypeViaSerialization.cpp
Proxy/: ProxyNotes  (+5 more)
Singleton/: CMakeLists.txt  DIContainer.cpp  Monostate.cpp  Singleton.cpp
(+4 files in other folders)
