add_executable(Point Point.cpp)
add_executable(FactoryMethod FactoryMethod.cpp)
add_executable(Factory Factory.cpp)
add_executable(InnerFactory InnerFactory.cpp)
add_executable(SingletonInnerFactory SingletonInnerFactory.cpp)
add_executable(AbstractFactory.cpp AbstractFactory)
add_executable(FunctionalFactory FunctionalFactory.cpp)